analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/PropertyWithoutName.java
public abstract interface Foo /* test.Foo*/ {
  @org.jetbrains.annotations.NotNull()
  public abstract @org.jetbrains.annotations.NotNull() java.lang.String getFoo();//  getFoo()
}
